2007-05-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc8xx/clock/clock.c: Remove unused var extclk_value.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* mpc6xx/clock/c_clock.c: Add initial cut at nanoseconds since last
	tick handler.

2007-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/include/byteorder.h: Use uint*_t instead of char/short/int.

2007-03-12	Joel Sherrill <joel@OARcorp.com>

	* mpc6xx/mmu/mmuAsm.S: Correct license URL and/or fix mistake in
	copyright notice. Both of these mistakes appear to be from code
	submitted after these changes were made previously.

2007-01-16 Till Straumann <strauman@slac.stanford.edu>

	* mpc6xx/mmu/pte121.h, mpc6xx/mmu/pte121.c:
	Added SLAC/Stanford Authorship Note / Copyright + Liability Disclaimer.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-07-12	Till Straumann <strauman@slac.stanford.edu>

	* mpc6xx/mmu/bat.c, mpc6xx/mmu/pte121.c, shared/src/cache.c:
	Checked inline assembly code; added 'm' operands and
	paranoia 'memory' clobbers. Also, made sure that no
	pure input operands are modified by the asm.

2006-06-19	Till Straumann <strauman@slac.stanford.edu>

	* mpc6xx/mmu/mmuAsm.S: re-checked synchronization
	requirements when manipulating the caches against the book
	and updated 'dssall', 'sync' and 'isync's accordingly.

2006-06-19	Till Straumann <strauman@slac.stanford.edu>

	* mpc6xx/exceptions/raw_exception.c, mpc6xx/exceptions/raw_exception.h:
	Added altivec exception. Unfortunately, this doesn't fit
	the normal scheme of vector = exception # << 8. So we picked
	an unused vector number (currently 0xa) where we map the special
	vector 0xf20 (altivec).

2006-06-19	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/cpu.c, new-exceptions/cpu_asm.S: Never
	allow the FPU to be switched on for integer-only tasks